# NeXtrace

./: .env  .env.example  .gitignore  README.md  band.txt  main.py  output.txt  pyproject.toml  pytest.ini  render.yaml  requirements.txt  verify_setup.py
.streamlit/: config.toml
agents/: agent1_forensic.py  agent2_attribution.py  agent3_impact.py  agent4_postmortem.py  base_agent.py  fallbacks.py
assets/screenshots/: README.md
band/: client.py  coordinator.py  message_types.py
core/: channels.py  client.py  coordinator.py  live_band.py
data/sample_logs/: api_key_leak_cloudtrail.json  api_key_leak_github_audit.json  api_key_leak_s3_access.json  credential_stuffing_logs.json  malformed_logs.json  noisy_logs.json  sparse_logs.json
outputs/: .gitkeep
pipeline/: orchestrator.py  state_manager.py
prompts/: agent1_prompt.py  agent2_prompt.py  agent3_prompt.py  agent4_prompt.py
schemas/: attribution_schema.py  impact_schema.py  input_schema.py  postmortem_schema.py  timeline_schema.py
scripts/: run_all_scenarios.py  run_scenario.py  test_llm.py  verify_band.py
tests/: conftest.py
tests/accuracy/: test_pipeline_accuracy.py
tests/functional/: test_pdf_export.py  test_pipeline_functional.py
tests/integration/: test_day4_hardening.py  test_pipeline.py
tests/robustness/: test_pipeline_robustness.py
tests/unit/: test_band_client.py  test_checkpoint.py  test_chunker.py  test_log_filter.py  test_premium_features.py  test_rate_limiter.py  test_schema_validation.py  test_schemas.py  test_ui_app.py
ui/: app.py
ui/components/: attack_map.py  attribution_view.py  band_status.py  impact_view.py  postmortem_view.py  summary_view.py  ticket_export.py  timeline_view.py
ui/styles/: theme.py
utils/: chunker.py  compliance_rules.py  geoip.py  log_filter.py  logger.py  mermaid.py  pdf_exporter.py  pdf_report.py  pii_masker.py  rate_limiter.py  severity.py  ticketing.py
