HEAD
[project]
name = "nextrace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secpostmortem"
version = "0.1.0"
description = "SecPostMortem — Security Incident Intelligence Platform built on Band"
readme = "README.md"
authors = [
    { name = "LabLab Hackathon Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "thenvoi-sdk>=0.2.11",
    "pydantic>=2.0",
    "streamlit",
    "python-dotenv",
    "openai"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
 beb34c3ef569e98ac18f33b8f78f1e0d8bd7cc46
