[project]
name = "nextrace"
version = "0.1.0"
description = "NeXtrace — Security Incident Intelligence Platform built on Band"
readme = "README.md"
authors = [
    { name = "LabLab Hackathon Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "band-sdk>=1.0.0",
    "pydantic>=2.0",
    "streamlit",
    "python-dotenv",
    "openai",
    "requests",
    "reportlab",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Explicit package list — the repo is a flat layout with several non-package
# top-level dirs (data/, assets/, outputs/, band_old/), so disable autodiscovery.
packages = [
    "agents",
    "core",
    "pipeline",
    "prompts",
    "schemas",
    "ui",
    "ui.components",
    "ui.styles",
    "utils",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
